# MutagenesisForge

./: .gitignore  BRCA.fasta  OR7E24.fasta  PRDM9.fasta  README.md  Snakefile  analysis.ipynb  extest.sbatch  filtered_21_22.bed  output.vcf0.txt  paper.md  parameters.yaml  pyproject.toml  test.ipynb  test.sbatch  test.vcf
.snakemake/code_tracking/: c3RhdHMudHh0  dmVwLm91dHB1dA==
.snakemake/input_tracking/: c3RhdHMudHh0  dmVwLm91dHB1dA==
.snakemake/shellcmd_tracking/: c3RhdHMudHh0  dmVwLm91dHB1dA==
paper/: paper.bib  paper.md
src/: .sim.py.swo  codon_builder.py  dnds.py  sim.py  stats.py
src/MutagenesisForge/: __init__.py  context.py  context2.py  exhaustive.py  main.py  models.py  mutation_model.py  random_vcf.py  test.ipynb
src/vep-sim/: __init__.py  main.py  sim.py  stat.py
src/vep_sim/: b_main.py  b_mut.py  exhaustive.py  main.py  mut_vcf.py  oop.py  random_vcf.py  sim.py  stat_utils.py  transition-transversion.py  transition_transversion.py  utils.py  vep.py
tests/: extest.sbatch  main.py  mut_vcf.py  output.txt  output.vep  output.vep_summary.html  output.vep_warnings.txt  prob_results.tsv  sim.py  test.sbatch  tester0.txt  tester1.txt  tester2.txt  tester3.txt  tester4.txt  tester5.txt  tester6.txt  tester7.txt  tester8.txt  tester9.txt  vep.py  yaml_in.py
tests/R/: .RData  .Rhistory  vep_distribution.Rmd
