[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vep-sim"
version = "0.1.0"
description = "create randomized simulations of variant effect predictions from an input vcf file and run statistics"
authors = ["Cooper Koers <ck5658@princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pysam = "*"
pyfaidx = "*"
click = "*"
pandas = "*"
scipy = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
vep-sim = "src.vep-sim.main:main"